--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
     <title>AppLover</title>
     <!-- App styles -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/main.css">
       <!-- App Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,700" rel="stylesheet">
   </head>
   <body>
     <!-- ESCRIBE TU CÓDIGO AQUÍ -->
+    <header>
+      <div class="menu container">
+        <a href="#" class="text-uppercase link"> Services </a>
+        <a href="#" class="text-uppercase link"> Work </a>
+        <a href="#" class="text-uppercase link"> The team</a>
+        <img src="assets/img/logo-r.png" class="logo" width="70">
+      </div>
+    </header>
+    <section id="home">
+      <div class="container">
+        <h2>YOU JUST FOUND AN UNTILMATE </h2>
+        <h1 class="text-uppercase text-home mb-0"> we are applove from heart</h1>
+        <p class="text-uppercase mt-0"> HANDCRAFTED - MODERN DESIGN - PIXEL PERFECT - PASSIONED DESIGN</p>
+        <a href="#services" class="btn-home"> View services</a>
+      </div>
+    </section>
+
   </body>
 </html>
