--- a/index.html
+++ b/index.html
@@ -27,6 +27,85 @@
         <a href="#services" class="btn-home"> View services</a>
       </div>
     </section>
+    <section id="services">
+      <div class="container">
+        <h2 class="text-uppercase text-services mt-0"></h2>
+        <h4> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
+        <div class="box-services">
+          <img src="assets/img/website.png" alt="" width="200">
+          <h5 class="mb-0"> USER INTERFACE DESIGN</h5>
+          <h6 class="m-0">Wireframing</h6>
+          <h6 class="m-0"> Prototyping</h6>
+          <h6 class="m-0"> Usability testing</h6>
+        </div>
+        <div class="box-services">
+          <img src="assets/img/img-1.png" alt="" width="200">
+          <h5 class="mb-0"> CONCEPT AND IDEAS </h5>
+          <h6 class="m-0"> Conceptualization </h6>
+          <h6 class="m-0"> Digital Branding</h6>
+          <h6 class="m-0"> Product Strategy </h6>
+        </div>
+        <div class="box-services">
+          <img src="assets/img/lapiz.png" alt="" width="200">
+          <h5 class="mb-0"> DESIGN AND BRANDING </h5>
+          <h6 class="m-0"> Interaction Design</h6>
+          <h6 class="m-0"> Graphic Design </h6>
+          <h6 class="m-0"> Identity Design </h6>
+        </div>
+      </div>
+    </section>
+    <section id="work">
+      <div class="container">
+        <h2 class="text-uppercase text-work mt-0"> Work </h2>
+        <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
+          <div class="work-img">
+            <img src="assets/img/hero.png" width="940">
+          </div>
+          <div class="box-work">
+            <img src="assets/img/img-1.jpg" alt="">
+            <h4 class="text-uppercase"> Nombre del proyecto </h4>
+          </div>
+          <div class="box-work">
+            <img src="assets/img/img-2.jpg" alt="">
+            <h4 class="text-uppercase"> Nombre del proyecto </h4>
+          </div>
+          <div class="box-work">
+            <img src="assets/img/img-3.jpg" alt="">
+            <h4 class="text-uppercase"> Nombre del proyecto </h4>
+          </div>
+          <div class="box-work">
+            <img src="assets/img/img-4.jpg" alt="">
+            <h4 class="text-uppercase"> Nombre del proyecto </h4>
+          </div>
+          <div class="box-work">
+            <img src="assets/img/img-5.jpg" alt="">
+            <h4 class="text-uppercase"> Nombre del proyecto </h4>
+          </div>
+          <div class="box-work">
+            <img src="assets/img/img-6.jpg" alt="">
+            <h4 class="text-uppercase"> Nombre del proyecto </h4>
+          </div>
+          <div class="box-work">
+            <img src="assets/img/img-7.jpg" alt="">
+            <h4 class="text-uppercase"> Nombre del proyecto </h4>
+          </div>
+          <div class="box-work">
+            <img src="assets/img/img-10.jpg" alt="">
+            <h4 class="text-uppercase"> Nombre del proyecto </h4>
+          </div>
+          <div class="box-work">
+            <img src="assets/img/img-11.jpg" alt="">
+            <h4 class="text-uppercase"> Nombre del proyecto </h4>
+          </div>
 
+      </div>
+
+    </section>
   </body>
 </html>
