--- a/index.html
+++ b/index.html
@@ -67,45 +67,48 @@
           <div class="work-img">
             <img src="assets/img/hero.png" width="940">
           </div>
-          <div class="box-work">
-            <img src="assets/img/img-1.jpg" alt="">
-            <h4 class="text-uppercase"> Nombre del proyecto </h4>
+          <div class="proyects">
+            <div class="box-work">
+              <img src="assets/img/img-1.jpg" alt="" class="box-img">
+              <h4 class="text-uppercase"> Nombre del proyecto </h4>
+            </div>
+            <div class="box-work">
+              <img src="assets/img/img-2.jpg" alt="" class="box-img">
+              <h4 class="text-uppercase"> Nombre del proyecto </h4>
+            </div>
+            <div class="box-work">
+              <img src="assets/img/img-3.jpg" alt="" class="box-img">
+              <h4 class="text-uppercase"> Nombre del proyecto </h4>
+            </div>
+            <div class="box-work">
+              <img src="assets/img/img-4.jpg" alt="" class="box-img">
+              <h4 class="text-uppercase"> Nombre del proyecto </h4>
+            </div>
+            <div class="box-work">
+              <img src="assets/img/img-5.jpg" alt="" class="box-img">
+              <h4 class="text-uppercase"> Nombre del proyecto </h4>
+            </div>
+            <div class="box-work">
+              <img src="assets/img/img-6.jpg" alt="" class="box-img">
+              <h4 class="text-uppercase"> Nombre del proyecto </h4>
+            </div>
+            <div class="box-work">
+              <img src="assets/img/img-7.jpg" alt="" class="box-img">
+              <h4 class="text-uppercase"> Nombre del proyecto </h4>
+            </div>
+            <div class="box-work">
+              <img src="assets/img/img-10.jpg" alt="" class="box-img">
+              <h4 class="text-uppercase"> Nombre del proyecto </h4>
+            </div>
+            <div class="box-work">
+              <img src="assets/img/img-11.jpg" alt="" class="box-img">
+              <h4 class="text-uppercase"> Nombre del proyecto </h4>
+            </div>
           </div>
-          <div class="box-work">
-            <img src="assets/img/img-2.jpg" alt="">
-            <h4 class="text-uppercase"> Nombre del proyecto </h4>
-          </div>
-          <div class="box-work">
-            <img src="assets/img/img-3.jpg" alt="">
-            <h4 class="text-uppercase"> Nombre del proyecto </h4>
-          </div>
-          <div class="box-work">
-            <img src="assets/img/img-4.jpg" alt="">
-            <h4 class="text-uppercase"> Nombre del proyecto </h4>
-          </div>
-          <div class="box-work">
-            <img src="assets/img/img-5.jpg" alt="">
-            <h4 class="text-uppercase"> Nombre del proyecto </h4>
-          </div>
-          <div class="box-work">
-            <img src="assets/img/img-6.jpg" alt="">
-            <h4 class="text-uppercase"> Nombre del proyecto </h4>
-          </div>
-          <div class="box-work">
-            <img src="assets/img/img-7.jpg" alt="">
-            <h4 class="text-uppercase"> Nombre del proyecto </h4>
-          </div>
-          <div class="box-work">
-            <img src="assets/img/img-10.jpg" alt="">
-            <h4 class="text-uppercase"> Nombre del proyecto </h4>
-          </div>
-          <div class="box-work">
-            <img src="assets/img/img-11.jpg" alt="">
-            <h4 class="text-uppercase"> Nombre del proyecto </h4>
-          </div>
-
       </div>
-
     </section>
+    <footer>
+      <p>  © Copyright Daffyta</p>
+    </footer>
   </body>
 </html>
