--- a/index.html
+++ b/index.html
@@ -105,8 +105,18 @@
             </div>
       </div>
     </section>
+
+    <!-- Modal -->
+   	<div id="imgModal" class="modal">
+   	  <div class="modal-content">
+         <span id="salir" class="cerrar">&times;</span>
+   	  	<img id="imagenZoom" style="width:100%">
+   	  </div>
+   	</div>
+
     <footer>
       <p>  © Copyright Daffyta</p>
     </footer>
+    <script type="text/javascript" src="assets/js/main.js"></script>
   </body>
 </html>
